@@ -1,12 +1,11 @@
 package ru.practicum.server.integration_tests;
 
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeAll;
+import jakarta.persistence.EntityManager;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.server.booking.dto.BookingCreateDto;
@@ -14,16 +13,13 @@ import ru.practicum.server.booking.dto.BookingDto;
 import ru.practicum.server.booking.model.Booking;
 import ru.practicum.server.booking.model.BookingState;
 import ru.practicum.server.booking.model.BookingStatus;
-import ru.practicum.server.booking.repository.BookingRepository;
 import ru.practicum.server.booking.service.BookingService;
 import ru.practicum.server.exceptions.NoRightsException;
 import ru.practicum.server.exceptions.NotFoundException;
 import ru.practicum.server.exceptions.StatusException;
 import ru.practicum.server.exceptions.UnavailableItemException;
 import ru.practicum.server.item.model.Item;
-import ru.practicum.server.item.repository.ItemRepository;
 import ru.practicum.server.user.model.User;
-import ru.practicum.server.user.repository.UserRepository;
 
 import java.time.LocalDateTime;
 import java.util.List;
@@ -35,69 +31,60 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 @Transactional
 @ActiveProfiles("test")
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
-@DirtiesContext(classMode = DirtiesContext.ClassMode.AFTER_CLASS)
 public class BookingServiceIntegrationTest {
 
-        @Autowired
-        private BookingService bookingService;
-        @Autowired
-        private BookingRepository bookingRepository;
-        @Autowired
-        private UserRepository userRepository;
-        @Autowired
-        private ItemRepository itemRepository;
+    @Autowired
+    private BookingService bookingService;
 
+    @Autowired
+    private EntityManager entityManager;
 
-    private User booker;
-    private User owner;
-    private Item item;
+    private Long bookerId;
+    private Long ownerId;
+    private Long itemId;
 
-    @BeforeAll
+    @BeforeEach
     void setUp() {
-        booker = User.builder()
-                .id(1L)
+        User booker = User.builder()
                 .name("Booker")
                 .email("booker@example.com")
                 .build();
-        owner = User.builder()
-                .id(2L)
+        entityManager.persist(booker);
+        entityManager.flush();
+        this.bookerId = booker.getId();
+
+        User owner = User.builder()
                 .name("Owner")
                 .email("owner@example.com")
                 .build();
+        entityManager.persist(owner);
+        entityManager.flush();
+        this.ownerId = owner.getId();
 
-        userRepository.save(booker);
-        userRepository.save(owner);
-
-        item = Item.builder()
-                .id(1L)
+        Item item = Item.builder()
                 .name("Test Item")
                 .description("Description")
                 .available(true)
                 .owner(owner)
                 .build();
-        itemRepository.save(item);
-    }
-
-    @AfterEach
-    void tearDown() {
-        bookingRepository.deleteAll();
-        itemRepository.deleteAll();
-        userRepository.deleteAll();
+        entityManager.persist(item);
+        entityManager.flush();
+        this.itemId = item.getId();
     }
 
     @Test
     void testCreateBooking_Success() {
         BookingCreateDto dto = BookingCreateDto.builder()
-                .itemId(item.getId())
+                .itemId(itemId)
                 .start(LocalDateTime.now().plusDays(1))
                 .end(LocalDateTime.now().plusDays(2))
                 .build();
 
-        BookingDto result = bookingService.createBooking(dto, booker.getId());
+        BookingDto result = bookingService.createBooking(dto, bookerId);
 
         assertThat(result).isNotNull();
-        assertThat(result.getItem().getId()).isEqualTo(item.getId());
-        assertThat(result.getBooker().getId()).isEqualTo(booker.getId());
+        assertThat(result.getItem().getId()).isEqualTo(itemId);
+        assertThat(result.getBooker().getId()).isEqualTo(bookerId);
         assertThat(result.getStatus()).isEqualTo(BookingStatus.WAITING);
         assertThat(result.getStart()).isEqualTo(dto.getStart());
         assertThat(result.getEnd()).isEqualTo(dto.getEnd());
@@ -105,16 +92,19 @@ public class BookingServiceIntegrationTest {
 
     @Test
     void testCreateBooking_ItemNotAvailable_ThrowsException() {
+        Item item = entityManager.find(Item.class, itemId);
+
         item.setAvailable(false);
-        itemRepository.save(item);
+        entityManager.persist(item);
+        entityManager.flush();
 
         BookingCreateDto dto = BookingCreateDto.builder()
-                .itemId(item.getId())
+                .itemId(itemId)
                 .start(LocalDateTime.now().plusDays(1))
                 .end(LocalDateTime.now().plusDays(2))
                 .build();
 
-        assertThatThrownBy(() -> bookingService.createBooking(dto, booker.getId()))
+        assertThatThrownBy(() -> bookingService.createBooking(dto, bookerId))
                 .isInstanceOf(UnavailableItemException.class)
                 .hasMessageContaining("Item is not available");
     }
@@ -122,15 +112,16 @@ public class BookingServiceIntegrationTest {
     @Test
     void testApprove_Success_Approval() {
         Booking booking = Booking.builder()
-                .item(item)
-                .booker(booker)
+                .item(entityManager.find(Item.class, itemId))
+                .booker(entityManager.find(User.class, bookerId))
                 .start(LocalDateTime.now().plusDays(1))
                 .end(LocalDateTime.now().plusDays(2))
                 .status(BookingStatus.WAITING)
                 .build();
-        bookingRepository.save(booking);
+        entityManager.persist(booking);
+        entityManager.flush();
 
-        BookingDto result = bookingService.approve(owner.getId(), booking.getId(), true);
+        BookingDto result = bookingService.approve(ownerId, booking.getId(), true);
 
         assertThat(result.getStatus()).isEqualTo(BookingStatus.APPROVED);
     }
@@ -138,15 +129,16 @@ public class BookingServiceIntegrationTest {
     @Test
     void testApprove_NotOwner_ThrowsNoRightsException() {
         Booking booking = Booking.builder()
-                .item(item)
-                .booker(booker)
+                .item(entityManager.find(Item.class, itemId))
+                .booker(entityManager.find(User.class, bookerId))
                 .start(LocalDateTime.now().plusDays(1))
                 .end(LocalDateTime.now().plusDays(2))
                 .status(BookingStatus.WAITING)
                 .build();
-        bookingRepository.save(booking);
+        entityManager.persist(booking);
+        entityManager.flush();
 
-        assertThatThrownBy(() -> bookingService.approve(booker.getId(), booking.getId(), true))
+        assertThatThrownBy(() -> bookingService.approve(bookerId, booking.getId(), true))
                 .isInstanceOf(NoRightsException.class)
                 .hasMessageContaining("User doesn't have sufficient rights");
     }
@@ -154,37 +146,39 @@ public class BookingServiceIntegrationTest {
     @Test
     void testFindBookingById_Success() {
         Booking booking = Booking.builder()
-                .item(item)
-                .booker(booker)
+                .item(entityManager.find(Item.class, itemId))
+                .booker(entityManager.find(User.class, bookerId))
                 .start(LocalDateTime.now().plusDays(1))
                 .end(LocalDateTime.now().plusDays(2))
                 .status(BookingStatus.WAITING)
                 .build();
-        bookingRepository.save(booking);
+        entityManager.persist(booking);
+        entityManager.flush();
 
-        BookingDto result = bookingService.findBookingById(booking.getId(), booker.getId());
+        BookingDto result = bookingService.findBookingById(booking.getId(), bookerId);
 
         assertThat(result.getId()).isEqualTo(booking.getId());
-        assertThat(result.getBooker().getId()).isEqualTo(booker.getId());
+        assertThat(result.getBooker().getId()).isEqualTo(bookerId);
     }
 
     @Test
     void testFindBookingById_NotBelongsToUser_ThrowsNotFoundException() {
         User stranger = User.builder()
-                .id(3L)
                 .name("Stranger")
                 .email("stranger@example.com")
                 .build();
-        userRepository.save(stranger);
+        entityManager.persist(stranger);
+        entityManager.flush();
 
         Booking booking = Booking.builder()
-                .item(item)
-                .booker(booker)
+                .item(entityManager.find(Item.class, itemId))
+                .booker(entityManager.find(User.class, bookerId))
                 .start(LocalDateTime.now().plusDays(1))
                 .end(LocalDateTime.now().plusDays(2))
                 .status(BookingStatus.WAITING)
                 .build();
-        bookingRepository.save(booking);
+        entityManager.persist(booking);
+        entityManager.flush();
 
         assertThatThrownBy(() -> bookingService.findBookingById(booking.getId(), stranger.getId()))
                 .isInstanceOf(NotFoundException.class)
@@ -194,76 +188,80 @@ public class BookingServiceIntegrationTest {
     @Test
     void testFindAllBookings_Current() {
         Booking past = Booking.builder()
-                .item(item)
-                .booker(booker)
+                .item(entityManager.find(Item.class, itemId))
+                .booker(entityManager.find(User.class, bookerId))
                 .start(LocalDateTime.now().minusDays(2))
                 .end(LocalDateTime.now().minusDays(1))
                 .status(BookingStatus.APPROVED)
                 .build();
         Booking current = Booking.builder()
-                .item(item)
-                .booker(booker)
+                .item(entityManager.find(Item.class, itemId))
+                .booker(entityManager.find(User.class, bookerId))
                 .start(LocalDateTime.now().minusHours(1))
                 .end(LocalDateTime.now().plusHours(1))
                 .status(BookingStatus.APPROVED)
                 .build();
-        bookingRepository.saveAll(List.of(past, current));
+        entityManager.persist(past);
+        entityManager.flush();
+        entityManager.persist(current);
+        entityManager.flush();
 
-
-        List<BookingDto> result = bookingService.findAllBookings(booker.getId(), BookingState.CURRENT);
-
+        List<BookingDto> result = bookingService.findAllBookings(bookerId, BookingState.CURRENT);
 
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getId()).isEqualTo(current.getId());
+        assertThat(result.getFirst().getId()).isEqualTo(current.getId());
     }
 
     @Test
     void testFindAllBookings_Waiting() {
         Booking waiting = Booking.builder()
-                .item(item)
-                .booker(booker)
+                .item(entityManager.find(Item.class, itemId))
+                .booker(entityManager.find(User.class, bookerId))
                 .start(LocalDateTime.now().plusDays(1))
                 .end(LocalDateTime.now().plusDays(2))
                 .status(BookingStatus.WAITING)
                 .build();
-        bookingRepository.save(waiting);
+        entityManager.persist(waiting);
+        entityManager.flush();
 
-        List<BookingDto> result = bookingService.findAllBookings(booker.getId(), BookingState.WAITING);
+        List<BookingDto> result = bookingService.findAllBookings(bookerId, BookingState.WAITING);
 
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getStatus()).isEqualTo(BookingStatus.WAITING);
+        assertThat(result.getFirst().getStatus()).isEqualTo(BookingStatus.WAITING);
     }
 
     @Test
     void testApproveBooking_OwnerApproves_Success() {
         Booking booking = Booking.builder()
-                .item(item)
-                .booker(booker)
+                .item(entityManager.find(Item.class, itemId))
+                .booker(entityManager.find(User.class, bookerId))
                 .start(LocalDateTime.now().plusDays(1))
                 .end(LocalDateTime.now().plusDays(2))
                 .status(BookingStatus.WAITING)
                 .build();
-        bookingRepository.save(booking);
+        entityManager.persist(booking);
+        entityManager.flush();
 
-        BookingDto result = bookingService.approve(owner.getId(), booking.getId(), true);
+        BookingDto result = bookingService.approve(ownerId, booking.getId(), true);
 
         assertThat(result.getStatus()).isEqualTo(BookingStatus.APPROVED);
-        assertThat(result.getItem().getId()).isEqualTo(item.getId());
-        assertThat(result.getBooker().getId()).isEqualTo(booker.getId());
+        assertThat(result.getItem().getId()).isEqualTo(itemId);
+        assertThat(result.getBooker().getId()).isEqualTo(bookerId);
     }
 
     @Test
     void testApproveBooking_OwnerRejects_Success() {
         Booking booking = Booking.builder()
-                .item(item)
-                .booker(booker)
+                .item(entityManager.find(Item.class, itemId))
+                .booker(entityManager.find(User.class, bookerId))
                 .start(LocalDateTime.now().plusDays(1))
                 .end(LocalDateTime.now().plusDays(2))
                 .status(BookingStatus.WAITING)
                 .build();
-        bookingRepository.save(booking);
+        entityManager.persist(booking);
+        entityManager.flush();
 
-        BookingDto result = bookingService.approve(owner.getId(), booking.getId(), false);
+        BookingDto result = bookingService.approve(ownerId, booking.getId(), false);
 
         assertThat(result.getStatus()).isEqualTo(BookingStatus.REJECTED);
     }
@@ -271,29 +269,31 @@ public class BookingServiceIntegrationTest {
     @Test
     void testApproveBooking_NotOwner_ThrowsException() {
         Booking booking = Booking.builder()
-                .item(item)
-                .booker(booker)
+                .item(entityManager.find(Item.class, itemId))
+                .booker(entityManager.find(User.class, bookerId))
                 .start(LocalDateTime.now().plusDays(1))
                 .end(LocalDateTime.now().plusDays(2))
                 .status(BookingStatus.WAITING)
                 .build();
-        bookingRepository.save(booking);
+        entityManager.persist(booking);
+        entityManager.flush();
 
         assertThatThrownBy(() ->
-                bookingService.approve(booker.getId(), booking.getId(), true))
+                bookingService.approve(bookerId, booking.getId(), true))
                 .isInstanceOf(NoRightsException.class)
                 .hasMessageContaining("User doesn't have sufficient rights");
     }
 
     @Test
     void testGetUserBookings_AllState_Success() {
-        Booking b1 = createBooking(booker, item, 1, 2, BookingStatus.APPROVED);
-        Booking b2 = createBooking(booker, item, 3, 4, BookingStatus.WAITING);
-        bookingRepository.saveAll(List.of(b1, b2));
+        Booking b1 = createBooking(entityManager.find(User.class, bookerId), entityManager.find(Item.class, itemId), 1, 2, BookingStatus.APPROVED);
+        Booking b2 = createBooking(entityManager.find(User.class, bookerId), entityManager.find(Item.class, itemId), 3, 4, BookingStatus.WAITING);
+        entityManager.persist(b1);
+        entityManager.flush();
+        entityManager.persist(b2);
+        entityManager.flush();
 
-
-        List<BookingDto> result = bookingService.findAllBookings(booker.getId(), BookingState.ALL);
-
+        List<BookingDto> result = bookingService.findAllBookings(bookerId, BookingState.ALL);
 
         assertThat(result).hasSize(2);
         assertThat(result.get(0).getId()).isEqualTo(b2.getId());
@@ -302,10 +302,10 @@ public class BookingServiceIntegrationTest {
 
     @Test
     void testGetUserBookings_OtherUser_ThrowsException() {
-        User otherUser = User.builder().id(999L).build();
+        Long nonExistentUserId = 999L;
 
         assertThatThrownBy(() ->
-                bookingService.getByOwner(otherUser.getId(), BookingState.ALL))
+                bookingService.getByOwner(nonExistentUserId, BookingState.ALL))
                 .isInstanceOf(NotFoundException.class)
                 .hasMessageContaining("Owner not found with id:");
     }
@@ -313,28 +313,33 @@ public class BookingServiceIntegrationTest {
     @Test
     void testCreateBooking_InvalidDates_ThrowsException() {
         BookingCreateDto dto = BookingCreateDto.builder()
-                .itemId(item.getId())
+                .itemId(itemId)
                 .start(LocalDateTime.now().plusDays(2))
                 .end(LocalDateTime.now().plusDays(1))
                 .build();
 
-        assertThatThrownBy(() -> bookingService.createBooking(dto, booker.getId()))
+        assertThatThrownBy(() -> bookingService.createBooking(dto, bookerId))
                 .isInstanceOf(RuntimeException.class)
                 .hasMessageContaining("End time is before start time");
     }
 
     @Test
     void testCreateBooking_ItemAlreadyBooked_ThrowsException() {
-        Booking booking = createBooking(booker, item, 1, 3, BookingStatus.APPROVED);
-        bookingRepository.save(booking);
+        Booking existing = createBooking(
+                entityManager.find(User.class, bookerId),
+                entityManager.find(Item.class, itemId),
+                1, 3, BookingStatus.APPROVED
+        );
+        entityManager.persist(existing);
+        entityManager.flush();
 
         BookingCreateDto dto = BookingCreateDto.builder()
-                .itemId(item.getId())
-                .start(LocalDateTime.now().plusDays(1))
-                .end(LocalDateTime.now().plusDays(2))
+                .itemId(itemId)
+                .start(LocalDateTime.now().plusDays(2))
+                .end(LocalDateTime.now().plusDays(4))
                 .build();
 
-        assertThatThrownBy(() -> bookingService.createBooking(dto, booker.getId()))
+        assertThatThrownBy(() -> bookingService.createBooking(dto, bookerId))
                 .isInstanceOf(RuntimeException.class)
                 .hasMessageContaining("Time conflict with existing bookings");
     }
@@ -342,12 +347,12 @@ public class BookingServiceIntegrationTest {
     @Test
     void testCreateBooking_OwnerTriesToBookOwnItem_ThrowsException() {
         BookingCreateDto dto = BookingCreateDto.builder()
-                .itemId(item.getId())
+                .itemId(itemId)
                 .start(LocalDateTime.now().plusDays(1))
                 .end(LocalDateTime.now().plusDays(2))
                 .build();
 
-        assertThatThrownBy(() -> bookingService.createBooking(dto, owner.getId()))
+        assertThatThrownBy(() -> bookingService.createBooking(dto, ownerId))
                 .isInstanceOf(RuntimeException.class)
                 .hasMessageContaining("Booker not allowed to book");
     }
@@ -355,52 +360,55 @@ public class BookingServiceIntegrationTest {
     @Test
     void testApproveBooking_AlreadyApproved_ThrowsStatusException() {
         Booking booking = Booking.builder()
-                .item(item)
-                .booker(booker)
+                .item(entityManager.find(Item.class, itemId))
+                .booker(entityManager.find(User.class, bookerId))
                 .start(LocalDateTime.now().plusDays(1))
                 .end(LocalDateTime.now().plusDays(2))
                 .status(BookingStatus.APPROVED)
                 .build();
-        bookingRepository.save(booking);
+        entityManager.persist(booking);
+        entityManager.flush();
 
-        assertThatThrownBy(() -> bookingService.approve(owner.getId(), booking.getId(), true))
+        assertThatThrownBy(() -> bookingService.approve(ownerId, booking.getId(), true))
                 .isInstanceOf(StatusException.class)
                 .hasMessageContaining("status already set");
     }
 
-
     @Test
     void testGetByOwner_CurrentBookings_Success() {
         Booking past = Booking.builder()
-                .item(item)
-                .booker(booker)
+                .item(entityManager.find(Item.class, itemId))
+                .booker(entityManager.find(User.class, bookerId))
                 .start(LocalDateTime.now().minusDays(2))
                 .end(LocalDateTime.now().minusDays(1))
                 .status(BookingStatus.APPROVED)
                 .build();
         Booking current = Booking.builder()
-                .item(item)
-                .booker(booker)
+                .item(entityManager.find(Item.class, itemId))
+                .booker(entityManager.find(User.class, bookerId))
                 .start(LocalDateTime.now().minusHours(1))
                 .end(LocalDateTime.now().plusHours(1))
                 .status(BookingStatus.APPROVED)
                 .build();
-        bookingRepository.saveAll(List.of(past, current));
+        entityManager.persist(past);
+        entityManager.flush();
+        entityManager.persist(current);
+        entityManager.flush();
 
-        List<BookingDto> result = bookingService.getByOwner(owner.getId(), BookingState.CURRENT);
+        List<BookingDto> result = bookingService.getByOwner(ownerId, BookingState.CURRENT);
 
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getId()).isEqualTo(current.getId());
+        assertThat(result.getFirst().getId()).isEqualTo(current.getId());
     }
 
     @Test
     void testGetByOwner_NoItems_ReturnsEmptyList() {
         User userWithNoItems = User.builder()
-                .id(3L)
                 .name("NoItemsUser")
                 .email("noitems@example.com")
                 .build();
-        userRepository.save(userWithNoItems);
+        entityManager.persist(userWithNoItems);
+        entityManager.flush();
 
         List<BookingDto> result = bookingService.getByOwner(userWithNoItems.getId(), BookingState.ALL);
 
@@ -409,7 +417,7 @@ public class BookingServiceIntegrationTest {
 
     @Test
     void testFindBookingById_BookingNotFound_ThrowsNotFoundException() {
-        assertThatThrownBy(() -> bookingService.findBookingById(999L, booker.getId()))
+        assertThatThrownBy(() -> bookingService.findBookingById(999L, bookerId))
                 .isInstanceOf(NotFoundException.class)
                 .hasMessageContaining("booking not found");
     }
